Refactor with picocli